--- a/MuInMVC/Views/Product/ProductDetail.cshtml
+++ b/MuInMVC/Views/Product/ProductDetail.cshtml
@@ -51,9 +51,69 @@
 				</div>
 			</div>
 		</div>
+
+		<!-- comment -->
+		<div class="comments-list-wrap">
+			@if (Model.CommentDtos.Count()==0)
+			{
+				<h3 class="comment-count-title">Hãy là người bình luận đầu tiên</h3>
+			} else
+			{
+				<h3 class="comment-count-title">@Model.CommentDtos.Count() Comments</h3>
+				<div class="comment-list">
+					@foreach(var comment in Model.CommentDtos)
+					{
+						<div class="single-comment-body">
+							<div class="comment-user-avater">
+								<img src="~/assets/img/avaters/avatar1.png" alt="">
+							</div>
+							<div class="comment-text-body">
+								<h4>@comment.UserName <span class="comment-date">@comment.CreatedAt.ToString("dd-MM-yyyy")</span> </h4>
+								<b>@comment.Title</b>
+								<p>@comment.Content</p>
+							</div>
+						</div>
+					}
+				@* <div class="single-comment-body">
+					<div class="comment-user-avater">
+						<img src="~/assets/img/avaters/avatar2.png" alt="">
+					</div>
+					<div class="comment-text-body">
+						<h4>Addy Aoe <span class="comment-date">May 12, 2020</span></h4>
+						<p>Nunc risus ex, tempus quis purus ac, tempor consequat ex. Vivamus sem magna, maximus at est id, maximus aliquet nunc. Suspendisse lacinia velit a eros porttitor, in interdum ante faucibus Suspendisse lacinia velit a eros porttitor, in interdum ante faucibus.</p>
+					</div>
+				</div> *@
+			</div>	
+			}
+		</div>
+
+		<div class="comment-template">
+			<h4>Viết Bình Luận</h4>
+			<form asp-action="ProductDetail" method="post">
+				<p>
+					<input type="text" placeholder="Tiêu đề">
+				</p>
+
+				<div class="rating d-flex justify-content-center">
+					@for (int i = 1; i <= 5; i++)
+					{
+						<input type="radio" id="star@i" name="Rating" value="@i" class="d-none" />
+						<label for="star@i" class="star-label" title="Rate @i stars">
+							<i class="fa fa-star"></i>
+						</label>
+					}
+				</div>
+
+				<p><textarea name="comment" id="comment" cols="30" rows="10" placeholder="Bình luận tại đây"></textarea></p>
+				<p><input type="submit" value="Đăng"></p>
+			</form>
+		</div>
+		<!-- end of comment-->
 	</div>
 </div>
 <!-- end single product -->
+
+
 <!-- more products -->
 <div class="more-products mb-150">
 	<div class="container">
@@ -100,3 +160,19 @@
 	</div>
 </div>
 <!-- end more products -->
+<style>
+	.rating {
+		direction: rtl;
+	}
+
+	.star-label {
+		cursor: pointer;
+		font-size: 2rem;
+		color: #ccc;
+	}
+	.star-label:hover,
+	.star-label:hover ~ .star-label,
+	.rating input:checked ~ .star-label {
+		color: #FFD700;
+	}
+</style>
