--- a/MuInMVC/Views/Shared/_Header2.cshtml
+++ b/MuInMVC/Views/Shared/_Header2.cshtml
@@ -29,6 +29,7 @@
 								<div class="header-icons">
 									<a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
 									<a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
+									<vc:login-button />
 								</div>
 							</li>
 						</ul>
