--- a/MuInMVC/Views/_ViewImports.cshtml
+++ b/MuInMVC/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using MuInMVC
 @using MuInMVC.Models
+@using MuInMVC.Controllers.Components
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, MuInMVC
