--- a/MuInMVC/Pages/Shared/_Layout.cshtml
+++ b/MuInMVC/Pages/Shared/_Layout.cshtml
@@ -3,19 +3,22 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - My Application</title>
+    <title>@ViewData["Title"] - MUIN</title>
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/assets/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/Account/Login">Login</a>
-            <a href="/Account/Register">Register</a>
-        </nav>
-    </header>
-    <main role="main" class="container">
-        @RenderBody()
+    <main role="main" class="row container-fluid bg-light bg-gradient">
+        <div class="col-6 p-0">
+            <div class="w-100 overflow-hidden" style="height:100vh">
+                <img style="object-fit:cover; width:100%; height:100%"  src="~/assets/img/LoginPoster.jpg"/>
+            </div>
+        </div>
+        <div class="col-6">
+            <div class="shadow-lg p-3 mb-5 bg-body rounded bg-white" style="width:50%; height:fit-content; margin-left:50%; margin-top:50%; transform:translate(-50%, -60%)">
+                @RenderBody()
+            </div>
+        </div>
     </main>
 </body>
 </html>
