--- a/MuInMVC/Views/Product/ProductDetail.cshtml
+++ b/MuInMVC/Views/Product/ProductDetail.cshtml
@@ -1,7 +1,9 @@
-﻿@model MuInShared.Product.ProductFullDto;
-
+﻿@using MuInMVC.ModelViews
+@using MuInShared.Cart
+@model MuInShared.Product.ProductFullDto;
 @{
 	ViewData["Title"] = ViewBag.ProductName;
+	var AddToCartVM = ViewBag.AddToCart as AddToCartVM;
 }
 
 <partial name="_Header1" />
@@ -35,11 +37,21 @@
 					<p class="single-product-pricing"><span>Say no with sale</span> @Model.ProductPrice.ToString("#,##0") VNĐ</p>
 					<p>@Model.Description</p>
 					<div class="single-product-form">
-						<form action="index.html">
-							<input type="number" placeholder="0">
+						<form asp-controller="Cart" asp-action="AddToCart" method="Post">
+							<input type="hidden" asp-for="@AddToCartVM.ProductId" />
+							<div class="row gx-10">
+								<div class="col-2">
+									<input type="number" placeholder="0" asp-for="@AddToCartVM.Quantity" class="form-control">
+								</div>
+								<div class="col-4">
+									<select asp-for="@AddToCartVM.ColorId" class="form-control" asp-items="ViewBag.Colors">
+										<option value="" selected>Choose Color</option>
+									</select>
+								</div>
+							</div>
+							<button type="submit" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</button>
 						</form>
-						<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-						<p><strong>Categories: </strong>Fruits, Organic</p>
+						<p><strong>Categories: </strong>@Model.CategoryName</p>
 					</div>
 					<h4>Share:</h4>
 					<ul class="product-share">
