--- a/MuInMVC/Views/Shared/_Header1.cshtml
+++ b/MuInMVC/Views/Shared/_Header1.cshtml
@@ -27,7 +27,7 @@
 							<li><a href="contact.html">Contact</a></li>
 							<li>
 								<div class="header-icons">
-									<a class="shopping-cart" href="cart.html"><i class="fas fa-shopping-cart"></i></a>
+									<vc:number-cart/>
 									<a class="mobile-hide search-bar-icon" href="#"><i class="fas fa-search"></i></a>
 									<vc:login-button/>
 								</div>
