--- a/MuInMVC/Pages/Account/Register.cshtml
+++ b/MuInMVC/Pages/Account/Register.cshtml
@@ -6,7 +6,9 @@
 }
 
 <div class="w-50 mb-3" style="margin-left:50%; transform:translateX(-50%)">
-    <img src="~/assets/img/logo.png" class="w-100" />
+    <a asp-controller="Home">
+        <img src="~/assets/img/logo.png" class="w-100" />
+    </a>
 </div>
 <h2 class="text-center mb-3">Đăng ký</h2>
 <form method="post">
@@ -30,3 +32,4 @@
         <button type="submit" class="btn btn-warning font-weight-bold">SignUp</button>
     </div>
 </form>
+<p class="text-center mt-2">Đã có tài khoản ? <a asp-page="/Account/Login">Đăng nhập</a></p>
