--- a/MuInMVC/Views/Shared/_Layout.cshtml
+++ b/MuInMVC/Views/Shared/_Layout.cshtml
@@ -29,7 +29,8 @@
 	<!-- main style -->
 	<link rel="stylesheet" href="~/assets/css/main.css">
 	<!-- responsive -->
-	<link rel="stylesheet" href="~/assets/css/responsive.css">
+    <link rel="stylesheet" href="~/assets/css/responsive.css">
+    <link href="~/assets/css/custom.css" rel="stylesheet" />
 
 </head>
 <body>
