--- a/MuInMVC/Views/Home/Index.cshtml
+++ b/MuInMVC/Views/Home/Index.cshtml
@@ -1,5 +1,7 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@using MuInShared.Product
+@{
+	ViewData["Title"] = "Home Page";
+	List<ProductDto> bestSeller = ViewBag.BestSellerProducts;
 }
 <partial name="_Header1" />
 <!-- home page slider -->
@@ -74,8 +76,8 @@
 						<i class="fas fa-shipping-fast"></i>
 					</div>
 					<div class="content">
-						<h3>Free Shipping</h3>
-						<p>When order over $75</p>
+						<h3>Miễn phí vận chuyển</h3>
+						<p>Cho đơn hàng trên 20 triệu</p>
 					</div>
 				</div>
 			</div>
@@ -85,8 +87,8 @@
 						<i class="fas fa-phone-volume"></i>
 					</div>
 					<div class="content">
-						<h3>24/7 Support</h3>
-						<p>Get support all day</p>
+						<h3>Hỗ trợ 24/7</h3>
+						<p>Nhận hỗ trợ mọi lúc</p>
 					</div>
 				</div>
 			</div>
@@ -96,8 +98,8 @@
 						<i class="fas fa-sync"></i>
 					</div>
 					<div class="content">
-						<h3>Refund</h3>
-						<p>Get refund within 3 days!</p>
+						<h3>Hoàn trả</h3>
+						<p>Bạn có thể hoàn trả trong 3 ngày!</p>
 					</div>
 				</div>
 			</div>
@@ -119,36 +121,19 @@
 		</div>
 
 		<div class="row">
-			<div class="col-lg-4 col-md-6 text-center">
-				<div class="single-product-item">
-					<div class="product-image">
-						<a href="single-product.html"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+			@foreach (var item in bestSeller)
+			{
+				<div class="col-lg-4 col-md-6 text-center">
+					<div class="single-product-item">
+						<div class="product-image">
+							<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductId"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+						</div>
+						<h3>@item.ProductName</h3>
+						<p class="product-price"> @item.ProductPrice.ToString("#,##0") VNĐ </p>
+						<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductId" class="cart-btn"><i class="fas fa-shopping-cart"></i>Xem thêm</a>
 					</div>
-					<h3>Strawberry</h3>
-					<p class="product-price"><span>Per Kg</span> 85$ </p>
-					<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 				</div>
-			</div>
-			<div class="col-lg-4 col-md-6 text-center">
-				<div class="single-product-item">
-					<div class="product-image">
-						<a href="single-product.html"><img src="assets/img/products/product-img-2.jpg" alt=""></a>
-					</div>
-					<h3>Berry</h3>
-					<p class="product-price"><span>Per Kg</span> 70$ </p>
-					<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0 text-center">
-				<div class="single-product-item">
-					<div class="product-image">
-						<a href="single-product.html"><img src="assets/img/products/product-img-3.jpg" alt=""></a>
-					</div>
-					<h3>Lemon</h3>
-					<p class="product-price"><span>Per Kg</span> 35$ </p>
-					<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
-				</div>
-			</div>
+			}				
 		</div>
 	</div>
 </div>
