--- a/MuInMVC/Views/Product/Index.cshtml
+++ b/MuInMVC/Views/Product/Index.cshtml
@@ -47,12 +47,12 @@
 					{
 						<div class="col-lg-4 col-md-6 text-center strawberry">
 							<div class="single-product-item">
-								<div class="product-image">
-									<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@product.ProductId"><img src="~/assets/img/products/product-img-1.jpg" alt=""></a>
+								<div class="product-image w-100 mb-4" style="height:250px">
+									<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@product.ProductId"><img src=@(product.ProductImage != "" ? product.ProductImage : "/assets/img/products/product_default.jpg" ) style="width:100%; height:100%; object-fit:cover" alt="@product.ImageName"></a>
 								</div>
 								<h3>@product.ProductName</h3>
 								<p class="product-price"> @product.ProductPrice.ToString("#,##0") VNĐ </p>
-								<a href="cart.html" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+								<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@product.ProductId" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
 							</div>
 						</div>
 					}
