--- a/MuInMVC/Views/Checkout/Index.cshtml
+++ b/MuInMVC/Views/Checkout/Index.cshtml
@@ -12,7 +12,7 @@
 		<div class="row">
 			<div class="col-lg-8 offset-lg-2 text-center">
 				<div class="breadcrumb-text">
-					<p>Fresh and Organic</p>
+					<p>Buying buying</p>
 					<h1>Check Out Product</h1>
 				</div>
 			</div>
@@ -98,7 +98,7 @@
 							</tbody>
 						}
 					</table>
-					<a href="#" class="boxed-btn">Place Order</a>
+					<a asp-action="Checkout" class="boxed-btn">Place Order</a>
 				</div>
 			</div>
 		</div>
