--- a/MuInMVC/Views/Home/Index.cshtml
+++ b/MuInMVC/Views/Home/Index.cshtml
@@ -123,14 +123,14 @@
 		<div class="row">
 			@foreach (var item in bestSeller)
 			{
-				<div class="col-lg-4 col-md-6 text-center">
+				<div class="col-lg-4 col-md-6 text-center strawberry">
 					<div class="single-product-item">
-						<div class="product-image">
-							<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductId"><img src="assets/img/products/product-img-1.jpg" alt=""></a>
+						<div class="product-image w-100 mb-4" style="height:250px">
+							<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductId"><img src=@(item.ProductImage != "" ? item.ProductImage : "/assets/img/products/product_default.jpg" ) style="width:100%; height:100%; object-fit:cover" alt="@item.ImageName"></a>
 						</div>
 						<h3>@item.ProductName</h3>
 						<p class="product-price"> @item.ProductPrice.ToString("#,##0") VNĐ </p>
-						<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductId" class="cart-btn"><i class="fas fa-shopping-cart"></i>Xem thêm</a>
+						<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@item.ProductId" class="cart-btn"><i class="fas fa-shopping-cart"></i> Xem thêm </a>
 					</div>
 				</div>
 			}				
@@ -148,18 +148,18 @@
 					<div class="price-box">
 						<div class="inner-price">
 							<span class="price">
-								<strong>30%</strong> <br> off per kg
+								<strong>5%</strong> <br> off per items
 							</span>
 						</div>
 					</div>
-					<img src="assets/img/a.jpg" alt="">
+					<img src="assets/img/products/product_default.jpg" alt="">
 				</div>
 			</div>
 			<!--Content Column-->
 			<div class="content-column col-lg-6">
 				<h3><span class="orange-text">Deal</span> of the month</h3>
-				<h4>Hikan Strwaberry</h4>
-				<div class="text">Quisquam minus maiores repudiandae nobis, minima saepe id, fugit ullam similique! Beatae, minima quisquam molestias facere ea. Perspiciatis unde omnis iste natus error sit voluptatem accusant</div>
+				<h4>GUITAR AND PIANO</h4>
+				<div class="text">Giảm giá 5% cho tất cả sản phẩm đến từ Yamaha và Casio đối với Guitar và Piano, nhận ngay discount tại đây</div>
 				<!--Countdown Timer-->
 				<div class="time-counter"><div class="time-countdown clearfix" data-countdown="2020/2/01"><div class="counter-column"><div class="inner"><span class="count">00</span>Days</div></div> <div class="counter-column"><div class="inner"><span class="count">00</span>Hours</div></div>  <div class="counter-column"><div class="inner"><span class="count">00</span>Mins</div></div>  <div class="counter-column"><div class="inner"><span class="count">00</span>Secs</div></div></div></div>
 				<a href="cart.html" class="cart-btn mt-3"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
@@ -176,7 +176,7 @@
 				<div class="testimonial-sliders">
 					<div class="single-testimonial-slider">
 						<div class="client-avater">
-							<img src="assets/img/avaters/avatar1.png" alt="">
+							<img src="assets/img/products/avatar1.png" alt="">
 						</div>
 						<div class="client-meta">
 							<h3>Saira Hakim <span>Local shop owner</span></h3>
@@ -234,9 +234,9 @@
 			<div class="col-lg-6 col-md-12">
 				<div class="abt-text">
 					<p class="top-sub">Since Year 1999</p>
-					<h2>We are <span class="orange-text">Fruitkha</span></h2>
-					<p>Etiam vulputate ut augue vel sodales. In sollicitudin neque et massa porttitor vestibulum ac vel nisi. Vestibulum placerat eget dolor sit amet posuere. In ut dolor aliquet, aliquet sapien sed, interdum velit. Nam eu molestie lorem.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente facilis illo repellat veritatis minus, et labore minima mollitia qui ducimus.</p>
+					<h2>We are <span class="orange-text">MUIN</span></h2>
+					<p>Mang đến sản phẩm chất lượng nhất đến từ Nhật Bản, Châu Âu và Mỹ với hàng mặt hàng cổ điển đến hiện đại giúp bạn lựa chọn sản phẩm tốt nhất</p>
+					<p>Khi đến với Muin bạn sẽ không cần vân vân nên chọn sản phẩm nào vì mọi sản phẩm đều chất lượng hihi.</p>
 					<a href="about.html" class="boxed-btn mt-4">know more</a>
 				</div>
 			</div>
