--- a/MuInMVC/Views/Product/Index.cshtml
+++ b/MuInMVC/Views/Product/Index.cshtml
@@ -52,7 +52,7 @@
 								</div>
 								<h3>@product.ProductName</h3>
 								<p class="product-price"> @product.ProductPrice.ToString("#,##0") VNĐ </p>
-								<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@product.ProductId" class="cart-btn"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
+								<a asp-controller="Product" asp-action="ProductDetail" asp-route-id="@product.ProductId" class="cart-btn"><i class="fas fa-shopping-cart"></i> Xem thêm </a>
 							</div>
 						</div>
 					}
