Add Feature: Pick Color to Change Image and Price

--- a/MuInMVC/Views/Product/Index.cshtml
+++ b/MuInMVC/Views/Product/Index.cshtml
@@ -31,7 +31,7 @@
 						@* <li data-filter=".strawberry">Strawberry</li> *@
 						@foreach (var cat in (List<CategoryDto>)ViewData["Categories"])
 						{
-							<li><a asp-controller="Category" asp-route-id="@cat.CatId">@cat.CatName</a></li>
+							<li><a asp-controller="Category" asp-action="Index" asp-route-id="@cat.CatId">@cat.CatName</a></li>
 						}
 					</ul>
 				</div>
