--- a/MuInMVC/Views/Shared/_Layout.cshtml
+++ b/MuInMVC/Views/Shared/_Layout.cshtml
@@ -68,7 +68,6 @@
 	@RenderBody()
 	<partial name="_LogoCarousel.cshtml" /></partial>
 	<partial name="_Footer.cshtml"></partial>
-	@await RenderSectionAsync("Scripts", required: false)
 	<!-- jquery -->
 	<script src="~/assets/js/jquery-1.11.3.min.js"></script>
 	<!-- bootstrap -->
@@ -89,6 +88,8 @@
 	<script src="~/assets/js/sticker.js"></script>
 	<!-- main js -->
 	<script src="~/assets/js/main.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	@await RenderSectionAsync("Scripts", required: false)
 
 </body>
 </html>
