Refactor [MVC]: Add ProductSku, Comment and User, Cart, Checkout Service

--- a/MuInMVC/Views/Cart/Index.cshtml
+++ b/MuInMVC/Views/Cart/Index.cshtml
@@ -95,7 +95,7 @@
 						</table>
 						<div class="cart-buttons">
 							<a id="updateCartButton" class="boxed-btn">Update Cart</a>
-							<a  class="boxed-btn black" asp-controller="Checkout">Check Out</a>
+							<a  class="boxed-btn black" asp-controller="Checkout" asp-action="Index">Check Out</a>
 						</div>
 					</div>
 
