--- a/MuInMVC/Pages/Account/Register.cshtml
+++ b/MuInMVC/Pages/Account/Register.cshtml
@@ -11,6 +11,12 @@
     </a>
 </div>
 <h2 class="text-center mb-3">Đăng ký</h2>
+@if (ViewData["ErrorMessage"] != null)
+{
+    <div class="alert alert-info">
+        @ViewData["ErrorMessage"]
+    </div>
+}
 <form method="post">
     <input type="hidden" name="returnUrl" value="@Model.ReturnUrl" />
     <div class="form-group">
