--- a/MuInMVC/Views/Checkout/Success.cshtml
+++ b/MuInMVC/Views/Checkout/Success.cshtml
@@ -22,7 +22,7 @@
 		<div class="row gx-10">
 			<div class="col4 text-left">
 				<h3>Cảm ơn bạn đã mua hàng của nhà MuIn</h3>
-				<p>Tên khách hàng: @Model.UserName</p>
+				<p>Tên khách hàng: @Model.FirstName</p>
 				<p>Số điện thoại: @Model.Phone</p>
 				<p>Địa chỉ: @Model.Address</p>
 				<p>Mã đơn hàng: @Model.OrderId</p>
