--- a/MuInMVC/Views/Checkout/Success.cshtml
+++ b/MuInMVC/Views/Checkout/Success.cshtml
@@ -26,7 +26,7 @@
 				<p>Số điện thoại: @Model.Phone</p>
 				<p>Địa chỉ: @Model.Address</p>
 				<p>Mã đơn hàng: @Model.OrderId</p>
-				<p>Tổng tiền: @Model.SumTotal.ToString("#,##0") VNĐ</p>
+				@* <p>Tổng tiền: @Model.SumTotal.ToString("#,##0") VNĐ</p> *@
 				<p>Ngày đặt hàng: @Model.CreateDate</p>
 			</div>
 			<div class="col-5">
