Adding Test, Shift the Mapper into Application Layer

--- a/MuInMVC/Views/Shared/Components/QueryProduct/Default.cshtml
+++ b/MuInMVC/Views/Shared/Components/QueryProduct/Default.cshtml
@@ -6,7 +6,7 @@
 	<div class="card-body">
 		<div class="form-group">
 			<label class="col-form-label text-right font-weight-bold">Nhãn hàng</label>
-			<select class="form-control selectpicker custom-select" asp-for="BrandAlias" asp-items="ViewBag.BrandList" id="Brand">
+			<select class="form-control selectpicker custom-select" asp-for="BrandId" asp-items="ViewBag.BrandList" id="Brand">
 				<option value="0">Chọn nhãn hàng</option>
 				<option value="0">No Filter</option>
 			</select>
